<resources>
    <string name="app_name">WeightsUp</string>
    <string name="app_id">chuckree.weightsup</string>
    <string name="main_heading">Fitness Profile</string>
    <string name="weight">Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="loss_gain">Loss/Gain</string>
    <string name="target_date">Target Date</string>
    <string name="days_left">Days Left</string>
    <string name="n_a">n/a</string>
    <string name="action_profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="log">Log</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="dynamic_date">Date: %1$s</string>
    <string name="delete">Delete</string>
    <string name="save">save</string>
    <string name="name">Name</string>
    <string name="gender">M/F</string>
    <string name="weight_log">Weight Log</string>
    <string name="add_log">Add a Log</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="weight_difference">Weight Difference</string>
    <string name="units">Units</string>
    <string name="progress_picture">Add Progress Picture</string>
    <string name="progress_picture_preview">Progress Picture Preview</string>
    <string name="as_on">as on</string>
    <string name="today">today</string>
</resources><!--https://www.norio.be/android-feature-graphic-generator/?config=%7B%22background%22%3A%7B%22color%22kj%3A%22%23c71702%22%2C%22gradient%22%3A%7B%22type%22%3A%22radial%22%2C%22radius%22%3A%22600%22%2C%22angle%22%3A%22vertical%22%2C%22color%22%3A%22%23c77694%22%7D%7D%2C%22title%22%3A%7B%22text%22%3A%22%22%2C%22position%22%3A148%2C%22color%22%3A%22%23ffffff%22%2C%22size%22%3A200%2C%22font%22%3A%7B%22family%22%3A%22sans-serif%22%2C%22effect%22%3A%22bold%22%7D%7D%2C%22subtitle%22%3A%7B%22text%22%3A%22%22%2C%22color%22%3A%22%23ffffff%22%2C%22size%22%3A100%2C%22offset%22%3A0%2C%22font%22%3A%7B%22family%22%3A%22sans-serif%22%2C%22effect%22%3A%22normal%22%7D%7D%2C%22image%22%3A%7B%22position%22%3A%220.5%22%2C%22positionX%22%3A%220.5%22%2C%22scale%22%3A%220.55%22%2C%22file%22%3A%7B%7D%7D%2C%22size%22%3A%22feature-graphic%22%7D-->