<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/log_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/log_item_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/weight" />

        <TextView
            android:id="@+id/log_item_loss_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/loss_gain" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/button_delete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:text="@string/delete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/progress_picture_log"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center|end"
        android:contentDescription="@string/progress_picture"
        android:src="@drawable/progress_pic" />

</RelativeLayout>